# solana-bpf-program-template

./: Cargo.toml  README.md
scripts/: patch.crates-io.sh  update-solana-dependencies.sh
src/: lib.rs
tests/: integration.rs
