[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.11.1"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.11.1"
solana-sdk = "=1.11.1"
solana-validator = "=1.11.1"
solana-logger = "=1.11.1"

[lib]
crate-type = ["cdylib", "lib"]
